[package]
name = "rust_p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.0", features = ["v4"]}
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"